<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="overview"><b>Overview</b></string>
    <string name="rating">User Rating</string>
    <string name="release_date">Release Date</string>
    <string name="title_activity_preference">Preference</string>
    <string name="msg_no_internet_connection">Please connect to Internet</string>

    <string name="pref_sortby">Sort By</string>
    <string name="pref_sortby_most_popular">Most Popular</string>
    <string name="pref_sortby_highest_rated">Highest Rated</string>
    <string name="pref_sortby_favorite">Favorite</string>

    <string name="pref_sortby_key" translatable="false">key_sortby</string>
    <string name="pref_sortby_most_popular_searchStr" translatable="false">popularity.desc</string>
    <string name="pref_sortby_highest_rated_searchStr" translatable="false">vote_average.desc</string>
    <string name="pref_sortby_favorite_searchStr" translatable="false">favorite</string>


    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="trailer_prefix">Trailer</string>
    <string name="msg_no_favorite_movie_found">No Favorite Movies Found...</string>
    <string name="msg_there_is_no_trailers">There is no trailers</string>
    <string name="togglebutton_offtext_mark_as_favorite">Mark as Favorite</string>
    <string name="togglebutton_ontext_favorite">❤ Favorite !</string>
    <string name="msn_there_is_no_reviews">There is no reviews</string>

</resources>
