<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/content_detail">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".DetailFragment"
        tools:showIn="@layout/activity_detail">


        <!--use android:clipToPadding="false" in parent layout to ensure a successful overwrite-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="-16dp"
            android:layout_marginRight="-16dp"
            android:layout_marginTop="-16dp">

            <TextView
                android:id="@+id/textview_movie_title"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:allowUndo="false"
                android:autoText="false"
                android:background="#7244e8"
                android:editable="false"
                android:enabled="false"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="Title"
                android:textColor="#e6ddf5"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


        <!--Poster rating and all-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/imageview_movie_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical"
                android:padding="20dp">

                <!--Release Date-->
                <TextView
                    android:id="@+id/textview_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/textview_user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/togglebutton_favorite"
                    android:layout_width="116dp"
                    android:layout_height="87dp"
                    android:background="#7244e8"
                    android:checked="false"
                    android:text="background"
                    android:textColor="#e6ddf5"
                    android:textOff="@string/togglebutton_offtext_mark_as_favorite"
                    android:textOn="@string/togglebutton_ontext_favorite" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/textview_overview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <!--Trailer-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/trailers"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/placeholder_layout_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"></LinearLayout>

        <!--Reviews-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/reviews"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/placeholder_layout_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>
</ScrollView>